3513
Don't know if this qualifies as opaque enough, and I also don't know if there is something you can do about it. Anyway, sometimes I forget the "def" when writing an auxiliary constructor:
```scala
// Eg.scala
class Eg(name: String) {
 this() = this("DEFAULT")
}

$$ scalac Eg.scala 
Eg.scala:2: error: value update is not a member of Eg
 this() = this("DEFAULT")
 ^
one error found
```

(I now immediately recognise the problem and simply add the missing "def", but the first few times, I found the error message a tiny bit cryptic.)
